--- a/main/core/theme/mb/templates/pages/blog/blog.html
+++ b/main/core/theme/mb/templates/pages/blog/blog.html
@@ -1,5 +1,12 @@
-{% extends 'base.html' %} {% load static %} {% load thumbnail %} {% block title %}{% endblock %}
-{% block description%}{% endblock %} {% block keywords %}{% endblock %}
+{% extends 'base.html' %} {% load static %} {% load thumbnail %}
+{% block title %}
+Статьи и полезная информация| Акрополь
+{% endblock %}
+
+{% block description%}
+Раздел с информацией о памятниках, мемориальных услугах полезные советы от компании Акрополь в Томске
+{% endblock %}
+{% block keywords %}{% endblock %}
 {% block content %}
 
 <main>
