--- a/main/core/theme/mb/templates/pages/blog/blog.html
+++ b/main/core/theme/mb/templates/pages/blog/blog.html
@@ -61,7 +61,9 @@
           {% endfor %}
         </div>
         {% else %}
-        <div class="empty-info">Статьи не заполнены</div>
+        <div class="empty-info">
+          <p>Пусто</p>
+        </div>
         {% endif %}
       </div>
     </div>
