--- a/main/core/theme/mb/templates/pages/catalog/product.html
+++ b/main/core/theme/mb/templates/pages/catalog/product.html
@@ -109,7 +109,7 @@
           </p>
           <div class="product-card__action">
             {% csrf_token %}
-            <a href="{% url 'cart_add' %}" class="product-card__add add-to-cart"
+            <a href="{% url 'cart_add' %}" rel="nofollow, noindex" class="product-card__add add-to-cart"
               data-product-id="{{ product.id }}">Добавить в корзину</a>
             <button type="button" class="product-card__btn" data-popup="consultation"
               data-order="Консультаци по {{ product.model }}">Заказать консультацию</button>
