--- a/main/core/admin/templates/components/admin-sidebar.html
+++ b/main/core/admin/templates/components/admin-sidebar.html
@@ -301,6 +301,7 @@
         </div>
         <div class="menu-sidebar__dropdown-content">
           <ul>
+            <li><a href="{% url 'gallery_settings' %}">Настройки галереи</a></li>
             <li><a href="{% url 'admin_gallery_category' %}">Список категорий</a></li>
             <li><a href="{% url 'admin_reviews_add' %}">Добавить категорию</a></li>
             <li><a href="{% url 'admin_gallery' %}">Список фотографий</a></li>
