--- a/main/core/admin/templates/gallery/gallery_settings.html
+++ b/main/core/admin/templates/gallery/gallery_settings.html
@@ -4,7 +4,7 @@
     <form action="." method="POST" class="form" enctype="multipart/form-data">
       <div class="page__head">
         <div class="page__head-save">
-          <h1 class="page__title">Страница добавления</h1>
+          <h1 class="page__title">Настройки блога</h1>
           <button type="submit" class="form__btn">
             <img src="{% static 'theme/mb/images/admin/save.svg' %}" alt="" />
             Сохранить
@@ -12,28 +12,28 @@
         </div>
       </div>
       {% csrf_token %}
-      <div class="page-content _show" id="basic">
+      <div class="page-content _show" id="seo">
+        <!-- SEO страницы -->
         <div class="page-content__row">
           <div class="page-content__onecol">
             <div class="form__group">
-              <label for="{{ form.name.id_for_label }}" class="form__controls-label"> <span>*</span>Наименование: </label>
-              {{ form.name }} {{ form.name.errors }}
+              <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> Заголовок h1 : </label>
+              {{ form.meta_h1 }} {{ form.meta_h1.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
+              <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> Мета заголовок : </label>
               {{ form.meta_title }} {{ form.meta_title.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> <span>*</span>Описание: </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label">
+                Мета описание :
+                <div class="meta-lenght">0</div>
+              </label>
               {{ form.meta_description }} {{ form.meta_description.errors }}
             </div>
             <div class="form__group">
-              <label for="{{ form.meta_keywords.id_for_label }}" class="form__controls-label"> <span>*</span>Ключевые слова: </label>
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> Мета keywords : </label>
               {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
-            </div>
-            <div class="form__group">
-              <label for="{{ form.slug.id_for_label }}" class="form__controls-label">SLUG :</label>
-              {{ form.slug }} {{ form.slug.errors }}
             </div>
           </div>
         </div>
