--- a/main/core/admin/templates/gallery/gallery_category_edit.html
+++ b/main/core/admin/templates/gallery/gallery_category_edit.html
@@ -32,6 +32,10 @@
               {{ form.image }} {{ form.image.errors }}
             </div>
             <div class="form__group">
+              <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
+              {{ form.meta_h1 }} {{ form.meta_h1.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
               {{ form.meta_title }} {{ form.meta_title.errors }}
             </div>
