--- a/#src/templates/admin/gallery/gallery_category_edit.html
+++ b/#src/templates/admin/gallery/gallery_category_edit.html
@@ -31,6 +31,22 @@
               <label for="{{ form.image.id_for_label }}" class="form__controls-label">Картинка :</label>
               {{ form.image }} {{ form.image.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.meta_h1.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
+              {{ form.meta_h1 }} {{ form.meta_h1.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.meta_title.id_for_label }}" class="form__controls-label"> <span>*</span>Заголовок: </label>
+              {{ form.meta_title }} {{ form.meta_title.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.meta_description.id_for_label }}" class="form__controls-label"> <span>*</span>Описание: </label>
+              {{ form.meta_description }} {{ form.meta_description.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.meta_keywords.id_for_label }}" class="form__controls-label"> <span>*</span>Ключевые слова: </label>
+              {{ form.meta_keywords }} {{ form.meta_keywords.errors }}
+            </div>
           </div>
         </div>
       </div>
