--- a/#src/templates/theme/pages/category-detail.html
+++ b/#src/templates/theme/pages/category-detail.html
@@ -1,4 +1,25 @@
-{% extends 'base.html' %} {% load static %}{% load carts_tag %}{% load thumbnail %}{% block content %}
+{% extends 'base.html' %}
+{% load static %}{% load carts_tag %}{% load thumbnail %}
+
+{% block title %}
+{% if category.meta_title %}
+{{ category.meta_title }}
+{% endif %}
+{% endblock %}
+
+{% block description %}
+{% if category.meta_description %}
+{{ category.meta_description }}
+{% endif %}
+{% endblock %}
+
+{% block keywords %}
+{% if category.meta_keywords %}
+{{ category.meta_keywords }}
+{% endif %}
+{%endblock %}
+
+{% block content %}
 <main class="page">
   <section class="gallery">
     <div class="gallery__container">
@@ -11,6 +32,9 @@
         </div>
         {% endcomment %}
         <div class="gallery__content">
+          {% if category.meta_h1 %}
+          <h1 class="category-details__title _title">{{category.meta_h1}}</h1>
+          {% endif %}
           <div class="gallery__images">
             {% comment %}
             <h2 class="gallery__images-title">{{ category.name|safe }}</h2>
@@ -19,7 +43,8 @@
               {% for image in images %}
               <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="gallery__image">
                 {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}" title="{{ image.name }}" />
+                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ image.name }}"
+                  title="{{ image.name }}" />
                 {% endthumbnail %}
               </a>
               {% endfor %}
@@ -41,7 +66,8 @@
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его производство</p>
+              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
+                производство</p>
             </li>
             <li>
               <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
@@ -91,7 +117,8 @@
                 <div class="form__agreement">
                   <input type="checkbox" name="agrement" id="id_agrement" checked />
                   <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой конфиденциальности</a>
+                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                      конфиденциальности</a>
                   </label>
                 </div>
               </div>
