--- a/main/core/admin/templates/blog/blog_post/post_add.html
+++ b/main/core/admin/templates/blog/blog_post/post_add.html
@@ -36,6 +36,13 @@
               {{ form.slug }} {{ form.slug.errors }}
             </div>
             <div class="form__group">
+              <label for="{{ form.subtitle_text.id_for_label }}" class="form__controls-label">
+                <span>*</span>
+                Текст под заголовком:
+              </label>
+              {{ form.subtitle_text }} {{ form.subtitle_text.errors }}
+            </div>
+            <div class="form__group">
               <label for="{{ form.description.id_for_label }}" class="form__controls-label">Контент стратьи : </label>
               {{ form.description }} {{ form.description.errors }}
             </div>
