--- a/main/core/theme/mb/templates/pages/blog/blog_detail.html
+++ b/main/core/theme/mb/templates/pages/blog/blog_detail.html
@@ -54,6 +54,12 @@
         </div>
       </div>
       <div class="blog-detail__content">
+        <ul>
+          <li>
+            <strong>Гранит</strong> — самый популярный выбор благодаря своей долговечности и устойчивости к погодным
+            условиям. Он может прослужить десятилетиями, сохраняя свой первоначальный вид.ф
+          </li>
+        </ul>
         {{ article.description|safe }}
       </div>
     </div>
