--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3103,21 +3103,26 @@ body::after {
 
 .blog-detail__content h1 {
   font-size: 45px;
-  line-height: 150%;
 }
 
 .blog-detail__content h2 {
   font-size: 40px;
-  line-height: 150%;
 }
 
 .blog-detail__content h3 {
   font-size: 35px;
-  line-height: 150%;
 }
 
 .blog-detail__content h4 {
   font-size: 30px;
+}
+
+.blog-detail__content h1,
+.blog-detail__content h2,
+.blog-detail__content h3,
+.blog-detail__content h4,
+.blog-detail__content h5,
+.blog-detail__content h6 {
   line-height: 150%;
 }
 
@@ -3130,6 +3135,7 @@ body::after {
   display: block;
   line-height: 150%;
   position: relative;
+  margin-bottom: 10px;
 }
 
 .blog-detail__content ul li::before {
@@ -3141,6 +3147,7 @@ body::after {
 
 .blog-detail__content p {
   line-height: 150%;
+  margin-bottom: 12px;
 }
 
 .blog-detail__content a {
