--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -3124,6 +3124,7 @@ body::after {
 .blog-detail__content h5,
 .blog-detail__content h6 {
   line-height: 150%;
+  margin-bottom: 15px;
 }
 
 .blog-detail__content ul,
