--- a/main/core/theme/mb/templates/pages/blog/blog_detail.html
+++ b/main/core/theme/mb/templates/pages/blog/blog_detail.html
@@ -17,8 +17,9 @@
             {% if article.meta_h1 %}
             {{article.meta_h1}}
             {% else %}
-            {{ article.name }}</h1>
-          {% endif %}
+            {{ article.name }}
+            {% endif %}
+          </h1>
           {% if article.subtitle_text %}
           <p>
             {{ article.subtitle_text }}
