--- a/main/core/theme/mb/templates/pages/blog/blog_detail.html
+++ b/main/core/theme/mb/templates/pages/blog/blog_detail.html
@@ -48,7 +48,7 @@
   <div class="blog-detail">
     <div class="blog-detail__container">
       <div class="blog-detail__top">
-        <p class="blog-detail__date">{{article.date_creation|date:"d F Y"}}</p>
+        <p class="blog-detail__date">{{article.date_creation|date:"j E Y"}}</p>
         <div class="blog-detail__views">
           <div class="blog-detail__eye">
             <svg xmlns="http://www.w3.org/2000/svg">
