--- a/#src/scss/pages/blog/blog-detail.scss
+++ b/#src/scss/pages/blog/blog-detail.scss
@@ -57,49 +57,59 @@
 
     h1 {
       font-size: 45px;
-      line-height: 150%;
     }
 
     h2 {
       font-size: 40px;
-      line-height: 150%;
     }
 
     h3 {
       font-size: 35px;
-      line-height: 150%;
     }
 
     h4 {
       font-size: 30px;
+    }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       line-height: 150%;
+      margin-bottom: 15px;
     }
 
     ul,
     ol {
-      margin-left: 30px;
+      margin-left: 15px;
+      margin-bottom: 15px;
     }
 
     ul {
       li {
+        display: block;
         line-height: 150%;
-        display: flex;
-        align-items: center;
-        gap: 10px;
+        position: relative;
+
+        &:not(:last-child) {
+          margin-bottom: 12px;
+        }
 
         &::before {
-          content: '';
+          content: '\25CB';
+          color: rgba($color: $accent, $alpha: 1.0);
           width: 8px;
           height: 8px;
-          border: 1px solid rgba($color: $accent, $alpha: 1.0);
-          // background-color: rgba($color: $accent, $alpha: 1.0);
-          border-radius: 50%;
+          margin-right: 6px;
         }
       }
     }
 
     p {
       line-height: 150%;
+      margin-bottom: 12px;
     }
 
     a {
@@ -164,6 +174,7 @@
     h1 {
       color: rgba($color: $white, $alpha: 1.0);
       line-height: 150%;
+      text-align: center;
     }
 
     p {
@@ -171,6 +182,7 @@
       line-height: 150%;
       max-width: 700px;
       text-align: center;
+      margin: 0 auto;
     }
 
 
