--- a/#src/templates/theme/pages/blog/blog_detail.html
+++ b/#src/templates/theme/pages/blog/blog_detail.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load thumbnail %}
-{% block title %}{% endblock %}
-{% block description %}{% endblock %}
-{% block keywords %}{% endblock %}
+{% block title %}{{ article.meta_title }}{% endblock %}
+{% block description %}{{ article.meta_description }}{% endblock %}
+{% block keywords %}{{ article.meta_keywords }}{% endblock %}
 {% block content %}
 
 <main>
@@ -12,12 +12,19 @@
       <img src="{{ article.image.url }}" alt="" class="banner__image">
       <div class="banner__inner">
         <div class="banner__content">
-          <h1 class="_title">{{ article.name }}</h1>
+
+          <h1 class="_title">
+            {% if article.meta_h1 %}
+            {{article.meta_h1}}
+            {% else %}
+            {{ article.name }}
+            {% endif %}
+          </h1>
+          {% if article.subtitle_text %}
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus voluptates alias illo enim qui soluta
-            magnam laboriosam est sapiente excepturi, dolorem dicta! Quibusdam nemo temporibus nesciunt aperiam, velit
-            molestiae enim.
+            {{ article.subtitle_text }}
           </p>
+          {% endif %}
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
               class="breadcrumbs__item">
@@ -41,7 +48,7 @@
   <div class="blog-detail">
     <div class="blog-detail__container">
       <div class="blog-detail__top">
-        <p class="blog-detail__date">23 августа 2024 г.</p>
+        <p class="blog-detail__date">{{article.date_creation|date:"j E Y"}}</p>
         <div class="blog-detail__views">
           <div class="blog-detail__eye">
             <svg xmlns="http://www.w3.org/2000/svg">
