--- a/#src/templates/theme/pages/service/service_grav.html
+++ b/#src/templates/theme/pages/service/service_grav.html
@@ -16,7 +16,8 @@
   <div class="wrapper">
     <div class="hero">
       <div class="hero__container">
-        <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="hero__image" />
+        <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="Гравировка на памятнике Томск"
+          title="Гравировка на памятнике Томск" class="hero__image" />
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -57,7 +58,8 @@
           <h2 class="service-content__title _title-h2">Преимущества гравировки станком</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka-2.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/ustanovka-2.png' %}" alt="Преимущества гравировки станком"
+                title="Преимущества гравировки станком" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
@@ -80,7 +82,8 @@
           <h2 class="service-content__title _title-h2">Преимущества ручной гравировки</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka-3.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/ustanovka-3.png' %}" alt="Преимущества ручной гравировки"
+                title="Преимущества ручной гравировки" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
@@ -109,7 +112,8 @@
           <h2 class="service-content__title _title-h2">Преимущества пескоструйной гравировки</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/ustanovka.png' %}" alt="Преимущества пескоструйной гравировки"
+                title="Преимущества пескоструйной гравировки" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
