--- a/main/core/theme/mb/templates/pages/service/service-test.html
+++ b/main/core/theme/mb/templates/pages/service/service-test.html
@@ -9,7 +9,8 @@
   <div class="wrapper">
     <div class="hero">
       <div class="hero__container">
-        <img src="{% static 'theme/mb/images/first-image.png' %}" alt="" class="hero__image" />
+        <img src="{% static 'theme/mb/images/first-image.png' %}" alt="Установка памятников в Томске"
+          title="Установка памятников в Томске" class="hero__image" />
         <div class="hero__inner">
           <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
             <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -48,7 +49,8 @@
           <h2 class="service-content__title _title-h2">Выбор монумента</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/second-image.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/second-image.png' %}" alt="Выбор монумента" title="Выбор монумента"
+                class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
@@ -86,7 +88,8 @@
           <h2 class="service-content__title _title-h2">Гранит и мрамор: в чём разница?</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/third-image.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/third-image.png' %}" alt="Гранит и мрамор: в чём разница?"
+                title="Гранит и мрамор: в чём разница?" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
@@ -115,7 +118,8 @@
             этапы</h2>
           <div class="service-content__row">
             <div class="service-content__col">
-              <img src="{% static 'theme/mb/images/fouth-image.png' %}" alt="" class="" />
+              <img src="{% static 'theme/mb/images/fouth-image.png' %}" alt="Технология установки памятника"
+                title="Технология установки памятника" class="" />
             </div>
             <div class="service-content__col">
               <div class="service-content__text _text">
