--- a/#src/templates/theme/includes/contact-block.html
+++ b/#src/templates/theme/includes/contact-block.html
@@ -6,16 +6,20 @@
         <h2 class="index-contact__title">Мы готовы ответить на все <span>ваши вопросы</span></h2>
         <ul class="index-contact__list">
           <li>
-            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="Проконсультируем по материалу памятника"
+              title="Проконсультируем по материалу памятника" class="index-contact__list-icon" />
             <p class="index-contact__list-text"><span>Проконсультируем</span> по материалу памятника</p>
           </li>
           <li>
-            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="Поможем определиться с типом памятника и заказать его
+            производство" title="Поможем определиться с типом памятника и заказать его
+              производство" class="index-contact__list-icon" />
             <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
               производство</p>
           </li>
           <li>
-            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
+            <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="Расскажем все  про доставку и установку"
+              title="Расскажем все  про доставку и установку" class="index-contact__list-icon" />
             <p class="index-contact__list-text"><span>Расскажем все</span> про доставку и установку</p>
           </li>
         </ul>
@@ -23,7 +27,8 @@
       <div class="index-contact__item">
         <div class="index-contact__mobile" style="background-image: url('{% static 'theme/mb/images/mobile.png' %}')">
           <div class="index-contact__logo">
-            <img src="{% static 'theme/mb/images/logo-black.png' %}" alt="" />
+            <img src="{% static 'theme/mb/images/logo-black.png' %}" alt="Свяжитесь с нами!"
+              title="Свяжитесь с нами!" />
           </div>
           <p class="index-contact__mobile-text">
             Свяжитесь с нами! <br />
@@ -31,9 +36,9 @@
           </p>
           <div class="index-contact__mobile-phones">
             <a href="tel:+79009210915">+7(900) 921-09-15<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}"
-                alt="" /></a>
+                alt="Номер телефона" title="Номер телефона" /></a>
             <a href="tel:+79039554018">+7(903) 955-40-18<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}"
-                alt="" /></a>
+                alt="Номер телефона" title="Номер телефона" /></a>
           </div>
           <a href="tel:+79039554018" class="index-contact__call _btn">Позвонить</a>
         </div>
@@ -50,19 +55,20 @@
             <div class="form__social-inner">
               <label for="ph" class="form__controls-label">
                 <input type="radio" id="ph" name="social" value="Позвонить по телефону" checked />
-                <img src="{% static 'theme/mb/images/icon/phone-contact.svg' %}" alt="" />
+                <img src="{% static 'theme/mb/images/icon/phone-contact.svg' %}" alt="Позвонить по телефону"
+                  title="Позвонить по телефону" />
               </label>
               <label for="tg" class="form__controls-label">
                 <input type="radio" id="tg" name="social" value="Через Telegram" />
-                <img src="{% static 'theme/mb/images/icon/tg.svg' %}" alt="" />
+                <img src="{% static 'theme/mb/images/icon/tg.svg' %}" alt="Через Telegram" title="Через Telegram" />
               </label>
               <label for="vk" class="form__controls-label">
                 <input type="radio" id="vk" name="social" value="Через Вконтакте" />
-                <img src="{% static 'theme/mb/images/icon/vk.svg' %}" alt="" />
+                <img src="{% static 'theme/mb/images/icon/vk.svg' %}" alt="Через Вконтакте" title="Через Вконтакте" />
               </label>
               <label for="wh" class="form__controls-label">
                 <input type="radio" id="wh" name="social" value="Через Whatsapp" />
-                <img src="{% static 'theme/mb/images/icon/wh.svg' %}" alt="" />
+                <img src="{% static 'theme/mb/images/icon/wh.svg' %}" alt="Через Whatsapp" title="Через Whatsapp" />
               </label>
             </div>
             <div class="form__bottom">
@@ -70,7 +76,7 @@
               <div class="form__agreement">
                 <input type="checkbox" name="agrement" id="id_agrement" checked />
                 <label for="id_agreement" class="form__label">
-                  Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
+                  Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="#">политикой
                     конфиденциальности</a>
                 </label>
               </div>
