--- a/#src/templates/theme/components/cart-item.html
+++ b/#src/templates/theme/components/cart-item.html
@@ -4,7 +4,7 @@
     {% if cart.product.image %} {% thumbnail cart.product.image "70x70" format="WEBP" crop="center" as im %}
     <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
     {% endthumbnail %} {% else %}
-    <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+    <img src="{% static 'theme/mb/images/no-image.png' %}" alt="Нет изображения" title="Нет изображения" />
     {% endif %}
   </div>
   <div class="mini-cart__content">
@@ -18,14 +18,17 @@
       </div>
     </div>
     <div class="mini-cart__action">
-      <a href="{% url 'cart_remove' %}" aria-label="Удаления товара из корзины" id="delete-card" class="mini-cart__delete remove-from-cart" data-cart-id="{{ cart.id }}">
+      <a href="{% url 'cart_remove' %}" aria-label="Удаления товара из корзины" id="delete-card"
+        class="mini-cart__delete remove-from-cart" data-cart-id="{{ cart.id }}">
         {% csrf_token %}
         <span></span>
       </a>
       <div class="mini-cart__counter">
-        <button class="decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart_change' %}">{% csrf_token %}-</button>
+        <button class="decrement" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart_change' %}">
+          {% csrf_token %}-</button>
         <input type="text" id="quantity" class="number" name="quantity" value="{{ cart.quantity }}" readonly />
-        <button class="increment" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart_change' %}">{% csrf_token %}+</button>
+        <button class="increment" data-cart-id="{{ cart.id }}" data-cart-change-url="{% url 'cart_change' %}">
+          {% csrf_token %}+</button>
       </div>
     </div>
   </div>
