--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
   <div class="footer__container">
     <div class="footer__inner">
-      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип" title="alt="Логотип"" /></div>
+      <div class="footer__logo"><img src="{% static 'theme/mb/images/logo-footer.svg' %}" alt="Логотип" title="Логотип" /></div>
       <div class="footer__menu">
         <ul class="footer__list">
           <li class="footer__item--first">Памятники</li>
