--- a/main/core/theme/mb/templates/includes/gallery-image.html
+++ b/main/core/theme/mb/templates/includes/gallery-image.html
@@ -3,7 +3,7 @@
   {% for image in gal_cat.categories.all %} {% if image.category.slug == gal_cat.slug %} {% if forloop.counter <= 5 %}
   <a href="{{ image.image.url }}" data-gall="{{ image.category.slug }}" class="index-work__item">
     {% thumbnail image.image "368x350" format="WEBP" crop="center" as im %}
-    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="Надгробный памятник" title="Надгробный памятник" />
     {% endthumbnail %}
   </a>
   {% endif %} {% endif %} {% endfor %}
