--- a/main/core/theme/mb/templates/pages/about.html
+++ b/main/core/theme/mb/templates/pages/about.html
@@ -13,7 +13,8 @@
 <main class="page">
   <div class="hero">
     <div class="hero__container">
-      <img src="{% static 'theme/mb/images/about-hero.png' %}" alt="" class="hero__image" />
+      <img src="{% static 'theme/mb/images/about-hero.png' %}" alt="О компании Акрополь" title="О компании Акрополь"
+        class="hero__image" />
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -61,11 +62,11 @@
               протяжении многих лет, и мы можем с уверенностью сказать, что гранитные памятники обладают
               рядом преимуществ перед памятниками из других материалов.
             </p>
-            <img src="{% static 'theme/mb/images/about.jpg' %}" alt="">
+            <img src="{% static 'theme/mb/images/about.jpg' %}" alt="О нашей компании" title="О нашей компании">
           </div>
           <div class="about__grid-item">
             <div class="about__grid-image">
-              <img src="{% static 'theme/mb/images/about-1.jpg' %}" alt="">
+              <img src="{% static 'theme/mb/images/about-1.jpg' %}" alt="О нашей компании" title="О нашей компании">
             </div>
           </div>
         </div>
@@ -77,7 +78,7 @@
       <div class="service-content__inner">
         <div class="service-content__row">
           <div class="service-content__col">
-            <img src="{% static 'theme/mb/images/about-3.png' %}" alt="" class="" />
+            <img src="{% static 'theme/mb/images/about-3.png' %}" alt="О нашей компании" title="О нашей компании" />
           </div>
           <div class="service-content__col">
             <div class="service-content__text _text">
