--- a/main/core/theme/mb/templates/pages/delivery.html
+++ b/main/core/theme/mb/templates/pages/delivery.html
@@ -15,7 +15,8 @@
 <main>
   <div class="hero">
     <div class="hero__container">
-      <img src="{% static 'theme/mb/images/delivery.png' %}" alt="" class="hero__image">
+      <img src="{% static 'theme/mb/images/delivery.png' %}" alt="Доставка и оплата" title="Доставка и оплата"
+        class="hero__image">
       <div class="hero__inner">
         <div class="breadcrumbs" itemscope="" itemtype="http://schema.org/BreadcrumbList">
           <a href="" itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"
@@ -29,7 +30,7 @@
             <meta itemprop="position" content="2" />
           </a>
           <span itemprop="name" class="breadcrumbs__item">
-            Установка памятников
+            Доставка и оплата
             <meta itemprop="position" content="3" />
           </span>
         </div>
